<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="194dp"
        android:layout_height="208dp"
        app:srcCompat="@drawable/ukaystyle"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="2dp" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/regfullname"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/retypepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/regretypepassword"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="100dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="SIGN UP"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="159dp" />

    <TextView
        android:id="@+id/signup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="or sign up with"
        app:layout_constraintTop_toBottomOf="@+id/retypepassword"
        tools:layout_editor_absoluteX="159dp" />

    <TextView
        android:id="@+id/signup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="Already a member? Sign In"
        app:layout_constraintTop_toBottomOf="@+id/signup2"
        tools:layout_editor_absoluteX="122dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/reguname"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/uname"
        tools:layout_editor_absoluteX="100dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="66dp"
        android:layout_height="73dp"
        app:srcCompat="@drawable/fb"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="570dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="66dp"
        android:layout_height="73dp"
        app:srcCompat="@drawable/ig"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="570dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/regemail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:layout_editor_absoluteX="100dp" />

</androidx.constraintlayout.widget.ConstraintLayout>